* Mon Mar 8 2021 Daniel Kouril <kouril@ics.muni.cz> - 2.1.1-0
- check_CVE-2018-12021: Check singularity is available before it's checked.
- CRL: Don't check CRLs if there's no certificate on the system.
- check_CVE-2013-2094,check_CVE-2016-5195,check_CVE-2018-1111,check_CVE-2018-12021,check_CVE-2018-14634,check_CVE-2021-3156,check_EGI-SVG-2016-5195,check_EGI-SVG-2018-14213: Mitigation checks are skipped when the vulnerability isn't present.

* Mon Mar 8 2021 Kyriakos Gkinis <kyrginis@admin.grnet.gr> - 2.1.0-0
- Added support for HTCondor-CE, using the jess grid job submission library.

* Sat Mar 6 2021 Daniel Kouril <kouril@ics.muni.cz> - 2.0.0-13
- pakiti-client: Simplify the processing of Pakiti output.

* Tue Mar 2 2021 Daniel Kouril <kouril@ics.muni.cz> - 2.0.0-12
- check_CVE-2018-1111: Check properly Pakiti results.

* Wed Feb 24 2021 Daniel Kouril <kouril@ics.muni.cz> - 2.0.0-11
- check_CVE-2018-1111: Fix the test of exit status.

* Mon Feb 22 2021 Daniel Kouril <kouril@ics.muni.cz> - 2.0.0-10
- pakiti-client: Fix Pakiti reporting using openssl and review processing results from Pakiti
- check_CVE-2018-1111: Check Pakiti results before checking for mitigations

* Sun Feb 14 2021 Daniel Kouril <kouril@ics.muni.cz> - 2.0.0-9
- check_CVE-2021-3156: Check if mitigation for CVE-2021-3156 has been applied

* Wed Oct 24 2019 Daniel Kouril <kouril@ics.muni.cz> - 2.0.0-8
- check_pakiti_vuln: Only ask for recent machines from Pakiti [ggus #143718]

* Wed Oct 09 2019 Kyriakos Gkinis <kyrginis@admin.grnet.gr> - 2.0.0-7
- check_pakiti_vuln: fix typos
- CREAM: Retrieve also std.out and std.err for debugging purposes

* Fri Sep 27 2019 Daniel Kouril <kouril@ics.muni.cz> - 2.0.0-6
- check_pakiti_vuln: update query URL to Pakiti3 server

* Mon Sep 23 2019 Daniel Kouril <kouril@ics.muni.cz> - 2.0.0-5
- Update Pakiti servers

* Wed Mar 6 2019 Kyriakos Gkinis <kyrginis@admin.grnet.gr> - 2.0.0-4
- Fix bug in Permissions test
- Include CRL and dcache-perms in ARC tests
