@@ -1,3 +1,6 @@
+* Tue Mar 9 2021 Kyriakos Gkinis <kyrginis@admin.grnet.gr> - 2.1.2-0
+- Setup a basic $PATH environment variable before executing probes on CREAM and HTCondor-CE.
+
 * Mon Mar 8 2021 Daniel Kouril <kouril@ics.muni.cz> - 2.1.1-0
 - check_CVE-2018-12021: Check singularity is available before it's checked.
 - CRL: Don't check CRLs if there's no certificate on the system.
